--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:U9l3shh/b5/cL50E/e1Dr+hkqFgzhy28A0zIOYzdFM0=
+APP_KEY=base64:/IE33MEFcdhYcewQkDhqDpTYMCKb5o5nFsUKEXcoy1M=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=UTC
+APP_LOCALE=en
+APP_VERSION=v1
 
 LOG_CHANNEL=stack
 
